--- a/Frontend/src/css/Custom.css
+++ b/Frontend/src/css/Custom.css
@@ -1,11 +1,61 @@
-.shadowIndex{
-   box-shadow: 2px -2px 10px 0px rgba(0,0,0,0.75);
-   -webkit-box-shadow: 2px -2px 10px 0px rgba(0,0,0,0.75);
-   -moz-box-shadow: 2px -2px 10px 0px rgba(0,0,0,0.75);
+.shadowIndex {
+	box-shadow: 2px -2px 10px 0px rgba(0, 0, 0, 0.75);
+	-webkit-box-shadow: 2px -2px 10px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 2px -2px 10px 0px rgba(0, 0, 0, 0.75);
 }
-#dropdown-basic-button{
-   background-color:transparent!important;
-   border: none;
+#dropdown-basic-button {
+	background-color: transparent !important;
+	border: none;
 }
-.dropdown-menu.show{
-background-color: #475569;}
+.dropdown-menu.show {
+	background-color: #475569;
+}
+
+.loader-page {
+	z-index: 25000;
+	color: white;
+	margin: 100px 0px 100px;
+	height: 100%;
+	font-size: 24px;
+	font-weight: 600;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: all 0.3s ease;
+	text-align: center;
+}
+.loader-page::before {
+	content: '';
+	position: absolute;
+	border: 4px solid rgb(50, 150, 176);
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	box-sizing: border-box;
+	border-left: 2px solid rgba(50, 150, 176, 0);
+	border-top: 2px solid rgba(50, 150, 176, 0);
+	animation: rotarload 1s linear infinite;
+	transform: rotate(0deg);
+}
+@keyframes rotarload {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+.loader-page::after {
+	content: '';
+	position: absolute;
+	border: 4px solid rgba(50, 150, 176, 0.5);
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	box-sizing: border-box;
+	border-left: 2px solid rgba(50, 150, 176, 0);
+	border-top: 2px solid rgba(50, 150, 176, 0);
+	animation: rotarload 1s ease-out infinite;
+	transform: rotate(0deg);
+}
