--- a/Frontend/src/css/Custom.css
+++ b/Frontend/src/css/Custom.css
@@ -59,3 +59,8 @@
 	animation: rotarload 1s ease-out infinite;
 	transform: rotate(0deg);
 }
+
+.modal-header .btn-close {
+	background-color: white !important;
+	color: white !important;
+}
