--- a/Frontend/src/css/Custom.css
+++ b/Frontend/src/css/Custom.css
@@ -64,3 +64,16 @@
 	background-color: white !important;
 	color: white !important;
 }
+
+.scroll-container {
+	width: 100%;
+	height: 40vh; /* Ajusta la altura según tus necesidades */
+	overflow-x: auto; /* Solo desplazar horizontalmente */
+	overflow-y: hidden; /* No permitir el desplazamiento vertical */
+	position: relative;
+}
+
+.stage-container {
+	width: 100%; /* Ancho mayor que el tamaño del contenedor para habilitar el desplazamiento horizontal */
+	height: 100%; /* O ajusta la altura según tus necesidades */
+}
