--- a/Frontend/src/css/Custom.css
+++ b/Frontend/src/css/Custom.css
@@ -49,7 +49,7 @@
 .loader-page::after {
 	content: '';
 	position: absolute;
-	border: 4px solid rgba(50, 150, 176, 0.5);
+	border: 4px solid #475569;
 	width: 60px;
 	height: 60px;
 	border-radius: 50%;
