modifico  balance contable. Corregir datos de gastos en chart

--- a/Frontend/src/css/Custom.css
+++ b/Frontend/src/css/Custom.css
@@ -73,3 +73,9 @@
 	box-shadow: none;
 
 }
+.p-accordion-content{
+	background-color: transparent;
+}
+.p-accordion-header-link{
+	background-color: #334155;
+}
